test/valid/Logic/ConverseImplication.plume
/**
 * Class to calculate the logical converse implication operation
 * @author 35237, Marcos Vasco
 */
class ConverseImplication extends BinaryLogicalOperation is
  
  method override calculate : (val1 : Boolean, val2 : Boolean) -> Boolean is
    if val1 == false && val2 == true then false
    else true