test/invalid/SubtypingCycle/SubTypingCycleA.plume
/**
 * Semantically incorrect class, containing a cycle in the subtyping relationship
 * @author 35237, Marcos Vasco
 */
class SubTypingCycleA extends SubTypingCycleB is
  
  method calculate : (val : Boolean) -> Boolean is
    false